Changed calculator body width to fix button spacing issue caused by flex space around.

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     justify-content: space-between;
     text-align: center;
     justify-items: center;
-    width: 130px;
+    width: 120px;
 }
 
 button {
